<resources>
    <string name="app_name">TwiceLove</string>
    <string name="activity">Activity</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="voice">Voice</string>
    <string name="vote">Vote</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="chat">Chat</string>

    <string name="tzuyu">Tzuyu</string>
    <string name="mina">Mina</string>
    <string name="sana">Sana</string>
    <string name="nayeon">Na Yeon</string>
    <string name="momo">Momo</string>
    <string name="jihyo">Ji Hyo</string>
    <string name="jungyeon">Jung Yeon</string>
    <string name="dahyun">Da Hyun</string>
    <string name="chaeyoung">Chae Young</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstName">First name</string>
    <string name="hint_lastName">Last name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="hint_search">Search</string>
</resources>
